test/parser/programs/valid/ifElse.guav
if (x == True) {
    return True
} else {
    return False
}
