test/parser/programs/invalid/class1.guav
class ball {
	is_round () {
		ret True
	}
}